fix html for odd even layout in san-pham,product

--- a/src/assets/css/index3.css
+++ b/src/assets/css/index3.css
@@ -853,7 +853,7 @@ footer #lang_sel_click ul ul a:visited {
     display: table-cell;
     position: relative;
     top: auto;
-    vertical-align: middle
+    vertical-align: middle;
   }
 
   .q_logo a {
