--- a/src/en/product.ejs
+++ b/src/en/product.ejs
@@ -104,27 +104,11 @@
                             </div>
                           </div>
                           <div
-                            class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row chuoi_detail_row_left display_desktop"
+                            class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row"
                             style=' text-align:left;'>
                             <div class=" full_section_inner clearfix">
                               <div class="  element_from_right">
                                 <div>
-                                  <div class="wpb_column vc_column_container vc_col-sm-6">
-                                    <div class="vc_column-inner ">
-                                      <div class="wpb_wrapper">
-                                        <div class="wpb_single_image wpb_content_element vc_align_left">
-                                          <div class="wpb_wrapper">
-                                            <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="1205"
-                                                height="748"
-                                                src="/assets/img/san-pham/aqsc-01-01-01.jpg"
-                                                class="vc_single_image-img attachment-full" alt=""
-                                                srcset="/assets/img/san-pham/aqsc-01-01-01.jpg 1205w, /assets/img/san-pham/aqsc-01-01-01-300x186.jpg 300w, /assets/img/san-pham/aqsc-01-01-01-768x477.jpg 768w, /assets/img/san-pham/aqsc-01-01-01-1024x636.jpg 1024w, /assets/img/san-pham/aqsc-01-01-01-700x435.jpg 700w"
-                                                sizes="(max-width: 1205px) 100vw, 1205px" /></div>
-                                          </div>
-                                        </div>
-                                      </div>
-                                    </div>
-                                  </div>
                                   <div class="wpb_column vc_column_container vc_col-sm-6">
                                     <div class="vc_column-inner ">
                                       <div class="wpb_wrapper">
@@ -146,35 +130,6 @@
                                       </div>
                                     </div>
                                   </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row display_mobile"
-                            style=' text-align:left;'>
-                            <div class=" full_section_inner clearfix">
-                              <div class="  element_from_left">
-                                <div>
-                                  <div class="wpb_column vc_column_container vc_col-sm-6">
-                                    <div class="vc_column-inner ">
-                                      <div class="wpb_wrapper">
-                                        <div
-                                          class="wpb_text_column wpb_content_element  text_chuoi_gia_tri san_pham_text">
-                                          <div class="wpb_wrapper">
-                                            <h3>PREMIX &#8211; VITAMIN</h3>
-                                            <p>Providing a range of the Premix &#8211; Vitamins are produced in the
-                                              world&#8217;s most advanced technology &#8211; They are designed to
-                                              optimize cost and performance of livestock, in line with the environment
-                                              and the technology of producing feeds. farming in Vietnam.<br />
-                                              <a class="button_learmore"
-                                                href="../en/product/premix-vitamin-khoang-en.html/">LEARN
-                                                MORE</a>
-                                            </p>
-                                          </div>
-                                        </div>
-                                      </div>
-                                    </div>
-                                  </div>
                                   <div class="wpb_column vc_column_container vc_col-sm-6">
                                     <div class="vc_column-inner ">
                                       <div class="wpb_wrapper">
@@ -191,6 +146,7 @@
                                       </div>
                                     </div>
                                   </div>
+                                  
                                 </div>
                               </div>
                             </div>
@@ -241,27 +197,11 @@
                             </div>
                           </div>
                           <div
-                            class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row chuoi_detail_row_left display_desktop"
+                            class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row"
                             style=' text-align:left;'>
                             <div class=" full_section_inner clearfix">
                               <div class="  element_from_right">
                                 <div>
-                                  <div class="wpb_column vc_column_container vc_col-sm-6">
-                                    <div class="vc_column-inner ">
-                                      <div class="wpb_wrapper">
-                                        <div class="wpb_single_image wpb_content_element vc_align_left">
-                                          <div class="wpb_wrapper">
-                                            <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="792"
-                                                height="618"
-                                                src="/assets/img/san-pham/sanpham4.png"
-                                                class="vc_single_image-img attachment-full" alt=""
-                                                srcset="/assets/img/san-pham/sanpham4.png 792w, /assets/img/san-pham/sanpham4-300x234.png 300w, /assets/img/san-pham/sanpham4-768x599.png 768w,/assets/img/san-pham/sanpham4-700x546.png 700w"
-                                                sizes="(max-width: 792px) 100vw, 792px" /></div>
-                                          </div>
-                                        </div>
-                                      </div>
-                                    </div>
-                                  </div>
                                   <div class="wpb_column vc_column_container vc_col-sm-6">
                                     <div class="vc_column-inner ">
                                       <div class="wpb_wrapper">
@@ -282,35 +222,6 @@
                                       </div>
                                     </div>
                                   </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row display_mobile"
-                            style=' text-align:left;'>
-                            <div class=" full_section_inner clearfix">
-                              <div class="  element_from_left">
-                                <div>
-                                  <div class="wpb_column vc_column_container vc_col-sm-6">
-                                    <div class="vc_column-inner ">
-                                      <div class="wpb_wrapper">
-                                        <div
-                                          class="wpb_text_column wpb_content_element  text_chuoi_gia_tri san_pham_text">
-                                          <div class="wpb_wrapper">
-                                            <h3>PRODUCTS<br />
-                                              FOR FARM SITE</h3>
-                                            <p>The high-quality product range for small to large-scale farm systems
-                                              includes alternative milk replacers, nutrients to support disease
-                                              management, improved survival and optimum livestock productivity.<br />
-                                              <a class="button_learmore"
-                                                href="../en/product/san-pham-dung-cho-trang-trai-en.html">LEARN
-                                                MORE</a>
-                                            </p>
-                                          </div>
-                                        </div>
-                                      </div>
-                                    </div>
-                                  </div>
                                   <div class="wpb_column vc_column_container vc_col-sm-6">
                                     <div class="vc_column-inner ">
                                       <div class="wpb_wrapper">
@@ -320,7 +231,7 @@
                                                 height="618"
                                                 src="/assets/img/san-pham/sanpham4.png"
                                                 class="vc_single_image-img attachment-full" alt=""
-                                                srcset="/assets/img/san-pham/sanpham4.png 792w, /assets/img/san-pham/sanpham4-300x234.png 300w, /assets/img/san-pham/sanpham4-768x599.png 768w, /assets/img/san-pham/sanpham4-700x546.png 700w"
+                                                srcset="/assets/img/san-pham/sanpham4.png 792w, /assets/img/san-pham/sanpham4-300x234.png 300w, /assets/img/san-pham/sanpham4-768x599.png 768w,/assets/img/san-pham/sanpham4-700x546.png 700w"
                                                 sizes="(max-width: 792px) 100vw, 792px" /></div>
                                           </div>
                                         </div>
