--- a/src/san-pham.ejs
+++ b/src/san-pham.ejs
@@ -104,27 +104,11 @@
                             </div>
                           </div>
                           <div
-                            class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row chuoi_detail_row_left display_desktop"
+                            class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row"
                             style=' text-align:left;'>
                             <div class=" full_section_inner clearfix">
-                              <div class="  element_from_right">
+                              <div class="  element_from_left">
                                 <div>
-                                  <div class="wpb_column vc_column_container vc_col-sm-6">
-                                    <div class="vc_column-inner ">
-                                      <div class="wpb_wrapper">
-                                        <div class="wpb_single_image wpb_content_element vc_align_left">
-                                          <div class="wpb_wrapper">
-                                            <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="1205"
-                                                height="748"
-                                                src="assets/img/san-pham/aqsc-01-01-01.jpg"
-                                                class="vc_single_image-img attachment-full" alt=""
-                                                srcset="assets/img/san-pham/aqsc-01-01-01.jpg 1205w, assets/img/san-pham/aqsc-01-01-01-300x186.jpg 300w, assets/img/san-pham/aqsc-01-01-01-768x477.jpg 768w, assets/img/san-pham/aqsc-01-01-01-1024x636.jpg 1024w, assets/img/san-pham/aqsc-01-01-01-700x435.jpg 700w"
-                                                sizes="(max-width: 1205px) 100vw, 1205px" /></div>
-                                          </div>
-                                        </div>
-                                      </div>
-                                    </div>
-                                  </div>
                                   <div class="wpb_column vc_column_container vc_col-sm-6">
                                     <div class="vc_column-inner ">
                                       <div class="wpb_wrapper">
@@ -145,50 +129,23 @@
                                       </div>
                                     </div>
                                   </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row display_mobile"
-                            style=' text-align:left;'>
-                            <div class=" full_section_inner clearfix">
-                              <div class="  element_from_left">
-                                <div>
-                                  <div class="wpb_column vc_column_container vc_col-sm-6">
-                                    <div class="vc_column-inner ">
-                                      <div class="wpb_wrapper">
-                                        <div
-                                          class="wpb_text_column wpb_content_element  text_chuoi_gia_tri san_pham_text">
-                                          <div class="wpb_wrapper">
-                                            <h3>Premix</h3>
-                                            <p>Cung cấp nguồn nguyên liệu trong và ngoài nước sử dụng trong ngành sản
-                                              xuất thức ăn chăn nuôi, các nhóm sản phẩm gồm: Đạm động vật, Đạm thực vật,
-                                              Marine, Dairy và các sản phẩm bổ trợ khác phù hợp với tiêu chuẩn sản xuất
-                                              Thức ăn chăn nuôi tại Việt Nam.<br />
-                                              <a class="button_learmore" href="../san-pham/premix-vitamin-khoang.html">TÌM HIỂU
-                                                THÊM</a>
-                                            </p>
-                                          </div>
-                                        </div>
-                                      </div>
-                                    </div>
-                                  </div>
                                   <div class="wpb_column vc_column_container vc_col-sm-6">
                                     <div class="vc_column-inner ">
                                       <div class="wpb_wrapper">
                                         <div class="wpb_single_image wpb_content_element vc_align_left">
                                           <div class="wpb_wrapper">
-                                            <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="792"
-                                                height="618"
-                                                src="assets/img/san-pham/sanpham2-768x599.png"
+                                            <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="1205"
+                                                height="748"
+                                                src="assets/img/san-pham/aqsc-01-01-01.jpg"
                                                 class="vc_single_image-img attachment-full" alt=""
-                                                srcset="assets/img/san-pham/sanpham2-768x599.png 792w, assets/img/san-pham/sanpham2-300x234.png 300w, assets/img/san-pham/sanpham2-768x599.png 768w, assets/img/san-pham/sanpham2-700x546.png 700w"
-                                                sizes="(max-width: 792px) 100vw, 792px" /></div>
+                                                srcset="assets/img/san-pham/aqsc-01-01-01.jpg 1205w, assets/img/san-pham/aqsc-01-01-01-300x186.jpg 300w, assets/img/san-pham/aqsc-01-01-01-768x477.jpg 768w, assets/img/san-pham/aqsc-01-01-01-1024x636.jpg 1024w, assets/img/san-pham/aqsc-01-01-01-700x435.jpg 700w"
+                                                sizes="(max-width: 1205px) 100vw, 1205px" /></div>
                                           </div>
                                         </div>
                                       </div>
                                     </div>
                                   </div>
+                                  
                                 </div>
                               </div>
                             </div>
@@ -238,27 +195,11 @@
                             </div>
                           </div>
                           <div
-                            class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row chuoi_detail_row_left display_desktop"
+                            class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row"
                             style=' text-align:left;'>
                             <div class=" full_section_inner clearfix">
-                              <div class="  element_from_right">
+                              <div class="  element_from_left">
                                 <div>
-                                  <div class="wpb_column vc_column_container vc_col-sm-6">
-                                    <div class="vc_column-inner ">
-                                      <div class="wpb_wrapper">
-                                        <div class="wpb_single_image wpb_content_element vc_align_left">
-                                          <div class="wpb_wrapper">
-                                            <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="792"
-                                                height="618"
-                                                src="assets/img/san-pham/sanpham4.png"
-                                                class="vc_single_image-img attachment-full" alt=""
-                                                srcset="assets/img/san-pham/sanpham4.png 792w, assets/img/san-pham/sanpham4-300x234.png 300w, assets/img/san-pham/sanpham4-768x599.png 768w, assets/img/san-pham/sanpham4-700x546.png 700w"
-                                                sizes="(max-width: 792px) 100vw, 792px" /></div>
-                                          </div>
-                                        </div>
-                                      </div>
-                                    </div>
-                                  </div>
                                   <div class="wpb_column vc_column_container vc_col-sm-6">
                                     <div class="vc_column-inner ">
                                       <div class="wpb_wrapper">
@@ -279,34 +220,6 @@
                                       </div>
                                     </div>
                                   </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row display_mobile"
-                            style=' text-align:left;'>
-                            <div class=" full_section_inner clearfix">
-                              <div class="  element_from_left">
-                                <div>
-                                  <div class="wpb_column vc_column_container vc_col-sm-6">
-                                    <div class="vc_column-inner ">
-                                      <div class="wpb_wrapper">
-                                        <div
-                                          class="wpb_text_column wpb_content_element  text_chuoi_gia_tri san_pham_text">
-                                          <div class="wpb_wrapper">
-                                            <h3>SẢN PHẨM<br />
-                                              DÙNG CHO TRANG TRẠI</h3>
-                                            <p>Nhóm sản phẩm chất lượng cao chuyên sử dụng cho hệ thống trại thương phẩm
-                                              bao gồm nhóm sữa thay thế, chất dinh dưỡng hỗ trợ điều trị bệnh, nâng cao
-                                              tỷ lệ sống và tối ưu năng suất chăn nuôi.<br />
-                                              <a class="button_learmore"
-                                                href="../san-pham/san-pham-dung-cho-trang-trai.html">TÌM HIỂU THÊM</a>
-                                            </p>
-                                          </div>
-                                        </div>
-                                      </div>
-                                    </div>
-                                  </div>
                                   <div class="wpb_column vc_column_container vc_col-sm-6">
                                     <div class="vc_column-inner ">
                                       <div class="wpb_wrapper">
@@ -323,6 +236,7 @@
                                       </div>
                                     </div>
                                   </div>
+                                  
                                 </div>
                               </div>
                             </div>
