--- a/src/en/index.ejs
+++ b/src/en/index.ejs
@@ -405,7 +405,8 @@
                               </div>
                             </div>
                           </div>
-                          <div class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row display_mobile"
+                          <div
+                            class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row"
                             style=' text-align:left;'>
                             <div class=" full_section_inner clearfix">
                               <div class="  element_from_left">
@@ -447,53 +448,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                          <div
-                            class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row chuoi_detail_row_left display_desktop"
-                            style=' text-align:left;'>
-                            <div class=" full_section_inner clearfix">
-                              <div class="  element_from_right">
-                                <div>
-                                  <div class="wpb_column vc_column_container vc_col-sm-6">
-                                    <div class="vc_column-inner ">
-                                      <div class="wpb_wrapper">
-                                        <div class="wpb_single_image wpb_content_element vc_align_left">
-                                          <div class="wpb_wrapper">
-                                            <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="792"
-                                                height="618"
-                                                src="/assets/img/index/img_chuoi_2.jpg"
-                                                class="vc_single_image-img attachment-full" alt=""
-                                                srcset="/assets/img/index/img_chuoi_2.jpg 792w, /assets/img/index/img_chuoi_2-300x234.jpg 300w, /assets/img/index/img_chuoi_2-768x599.jpg 768w, /assets/img/index/img_chuoi_2-700x546.jpg 700w"
-                                                sizes="(max-width: 792px) 100vw, 792px" /></div>
-                                          </div>
-                                        </div>
-                                      </div>
-                                    </div>
-                                  </div>
-                                  <div class="wpb_column vc_column_container vc_col-sm-6">
-                                    <div class="vc_column-inner ">
-                                      <div class="wpb_wrapper">
-                                        <div class="wpb_text_column wpb_content_element  text_chuoi_gia_tri">
-                                          <div class="wpb_wrapper">
-                                            <p><img class="alignnone size-full wp-image-48"
-                                                src="/assets/img/index/chuoi_gia_Tri_icon_2-1.png"
-                                                alt="" width="195" height="195"
-                                                srcset="/assets/img/index/chuoi_gia_Tri_icon_2-1.png 195w, /assets/img/index/chuoi_gia_Tri_icon_2-1-150x150.png 150w"
-                                                sizes="(max-width: 195px) 100vw, 195px" /></p>
-                                            <h3>Optimal solution<br />
-                                              for each customers</h3>
-                                            <p>Our unique strengths are synergies to create business conditions based on
-                                              a rich client portfolio. Thereby, we have a solid basis to bring optimal
-                                              solutions for each customer. For us, efficiency is the first priority
-                                              before any project.</p>
-                                          </div>
-                                        </div>
-                                      </div>
-                                    </div>
-                                  </div>
+                                  
                                 </div>
                               </div>
                             </div>
