- add news page 1/5

--- a/src/en/news-events.ejs
+++ b/src/en/news-events.ejs
@@ -57,6 +57,118 @@
                     <div class="wpb_column vc_column_container vc_col-sm-12">
                       <div class="vc_column-inner ">
                         <div class="wpb_wrapper">
+                          <div class="TinTuc_shortcode">
+                            <ul>
+                              <li>
+                                <div class="TinTuc_SuKien_Detail">
+                                  <div class="text_tintuc">
+                                    <div class="text_tintuc_detail">
+                                      <h4>LIVESTOCK KNOWLEDGE</h4>
+                                      <h3><a
+                                          href="/en/news/kiem-soat-chat-luong-thuc-an-chan-nuoi-en.html">TO IMPROVE COMPANY PROFITABILITY, CONTROLLING THE QUALITY OF LIVESTOCK FEED IS CRUCIAL.</a></h3>
+                                      <p>Quality goes hand in hand with appropriate nutritional value, while efficiently utilizing ever-changing raw material sources - producing livestock feed always requires a sharp mind and the ability to make quick and decisive decisions&#8230;</p>
+                                      <a href="/en/news/kiem-soat-chat-luong-thuc-an-chan-nuoi-en.html"
+                                        class="button_learmore">Xem thêm</a>
+                                    </div>
+                                  </div>
+                                  <div class="thumbnail">
+                                    <a
+                                      href="/en/news/kiem-soat-chat-luong-thuc-an-chan-nuoi-en.html"><img
+                                        width="792" height="618"
+                                        src="/assets/img/tin-tuc-su-kien/about_home-768x502.png"
+                                        class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
+                                        srcset="/assets/img/tin-tuc-su-kien/about_home-768x502.png 792w, /assets/img/tin-tuc-su-kien/about_home-300x196.png 300w, /assets/img/tin-tuc-su-kien/about_home-768x502.png 768w, assets/img/tin-tuc-su-kien/about_home-700x458.png 700w"
+                                        sizes="(max-width: 792px) 100vw, 792px" /></a>
+                                  </div>
+                                </div>
+                              </li>
+                              <li>
+                                <div class="TinTuc_SuKien_Detail">
+                                  <div class="text_tintuc">
+                                    <div class="text_tintuc_detail">
+                                      <h4>LIVESTOCK KNOWLEDGE</h4>
+                                      <h3><a
+                                          href="/en/news/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi-en.html">6 STEPS IN FORMULATING LIVESTOCK FEED</a></h3>
+                                      <p>Formulating feed remains a mystery not only to most fresh graduates but also to some experts who may have only recently encountered this issue..</p>
+                                      <a href="/en/news/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi-en.html"
+                                        class="button_learmore">Xem thêm</a>
+                                    </div>
+                                  </div>
+                                  <div class="thumbnail">
+                                    <a href="/en/news/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi-en.html"><img
+                                        width="440" height="260"
+                                        src="/assets/img/tin-tuc-su-kien/1528276943562.png"
+                                        class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
+                                        srcset="/assets/img/tin-tuc-su-kien/1528276943562.png 440w, /assets/img/tin-tuc-su-kien/1528276943562-300x177.png 300w"
+                                        sizes="(max-width: 440px) 100vw, 440px" /></a>
+                                  </div>
+                                </div>
+                              </li>
+                              <li>
+                                <div class="TinTuc_SuKien_Detail">
+                                  <div class="text_tintuc">
+                                    <div class="text_tintuc_detail">
+                                      <h4>LIVESTOCK KNOWLEDGE</h4>
+                                      <h3><a
+                                          href="/en/news/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi-en.html">CAN VITAMIN E BE REDUCED OR REPLACED IN LIVESTOCK FEED ?</a></h3>
+                                      <p>Vitamin E can be partially substituted or economized by using other antioxidants, but it can never be fully replaced; this article explains why vitamin E is crucial for&#8230;</p>
+                                      <a href="/en/news/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi-en.html"
+                                        class="button_learmore">Xem thêm</a>
+                                    </div>
+                                  </div>
+                                  <div class="thumbnail">
+                                    <a
+                                      href="/en/news/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi-en.html"><img
+                                        width="792" height="618"
+                                        src="/assets/img/tin-tuc-su-kien/img_chuoi_1.jpg"
+                                        class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
+                                        srcset="/assets/img/tin-tuc-su-kien/img_chuoi_1.jpg 792w, /assets/img/tin-tuc-su-kien/img_chuoi_1-300x234.jpg 300w, /assets/img/tin-tuc-su-kien/img_chuoi_1-768x599.jpg 768w, /assets/img/tin-tuc-su-kien/img_chuoi_1-700x546.jpg 700w"
+                                        sizes="(max-width: 792px) 100vw, 792px" /></a>
+                                  </div>
+                                </div>
+                              </li>
+                              <li>
+                                <div class="TinTuc_SuKien_Detail">
+                                  <div class="text_tintuc">
+                                    <div class="text_tintuc_detail">
+                                      <h4>LIVESTOCK KNOWLEDGE</h4>
+                                      <h3><a
+                                          href="/en/news/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con-en.html">BUFFER VALUE CONTROL IN PIGLET FEED</a></h3>
+                                      <p>Practical formulation of modern piglet diets requires considering the buffering capacity of the ration, with the target buffer value being below 650 meq/kg. In any intensive pig farming system&#8230;</p>
+                                      <a href="/en/news/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con-en.html"
+                                        class="button_learmore">Xem thêm</a>
+                                    </div>
+                                  </div>
+                                  <div class="thumbnail">
+                                    <a href="/en/news/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con-en.html"><img
+                                        width="800" height="560"
+                                        src="/assets/img/tin-tuc-su-kien/iStock_487525682-e1529470879149.jpg"
+                                        class="attachment-post-thumbnail size-post-thumbnail wp-post-image"
+                                        alt="" /></a>
+                                  </div>
+                                </div>
+                              </li>
+                              <li>
+                                <div class="TinTuc_SuKien_Detail">
+                                  <div class="text_tintuc">
+                                    <div class="text_tintuc_detail">
+                                      <h4>LIVESTOCK KNOWLEDGE</h4>
+                                      <h3><a href="/en/news/dieu-chinh-che-do-dinh-duong-cho-heo-nai-en.html">ADJUSTING NUTRITION FOR SOWS DURING THE FARROWING TRANSITION PHASE</a></h3>
+                                      <p>Healthier piglets will contribute to increased profitability during the rearing process. Based on recent experiments and the results of implementing advanced nutrition programs, it has been confirmed that improving nutrition for piglets&#8230;</p>
+                                      <a href="/en/news/dieu-chinh-che-do-dinh-duong-cho-heo-nai-en.html" class="button_learmore">Xem thêm</a>
+                                    </div>
+                                  </div>
+                                  <div class="thumbnail">
+                                    <a href="/en/news/dieu-chinh-che-do-dinh-duong-cho-heo-nai-en.html"><img width="664" height="524"
+                                        src="assets/img/tin-tuc-su-kien/tin_4.png"
+                                        class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
+                                        srcset="/assets/img/tin-tuc-su-kien/tin_4.png 664w, /assets/img/tin-tuc-su-kien/tin_4-300x237.png 300w"
+                                        sizes="(max-width: 664px) 100vw, 664px" /></a>
+                                  </div>
+                                </div>
+                              </li>
+                            </ul>
+                          </div>
                           <div class="wpb_text_column wpb_content_element ">
                             <div class="wpb_wrapper">
                             </div>
