--- a/src/tin-tuc/kiem-soat-chat-luong-thuc-an-chan-nuoi.ejs
+++ b/src/tin-tuc/kiem-soat-chat-luong-thuc-an-chan-nuoi.ejs
@@ -141,7 +141,7 @@
                             <li>
                               <div class="Post-image">
                                 <a href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html"
-                                  title="Có thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ? thumbnail=" ><img width="
+                                  title="Có thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ?" thumbnail=""" ><img width="
                                   792" height="618"
                                   src="/assets/img/tin-tuc/img_chuoi_1.jpg"
                                   class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
@@ -167,7 +167,7 @@
                             <li>
                               <div class="Post-image">
                                 <a href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html"
-                                  title="KIỂM SOÁT CHẤT LƯỢNG THỨC ĂN CHĂN NUÔI ĐỂ CẢI THIỆN LỢI NHUẬN CÔNG TY thumbnail=" ><img width=" 800"
+                                  title="Kiểm soát giá trị đệm trong thức ăn heo con" thumbnail="" ><img width=" 800"
                                   height="560"
                                   src="/assets/img/tin-tuc/iStock_487525682-e1529470879149.jpg"
                                   class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="" /></a>
@@ -191,7 +191,7 @@
                             <li>
                               <div class="Post-image">
                                 <a href="/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.html"
-                                  title="Điều chỉnh chế độ dinh dưỡng cho heo nái trong giai đoạn chuyển tiếp khi sinh thumbnail="" ><img width="
+                                  title="Điều chỉnh chế độ dinh dưỡng cho heo nái trong giai đoạn chuyển tiếp khi sinh" thumbnail="" ><img width="
                                   664" height="524" src="/assets/img/tin-tuc/tin_4.png"
                                   class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
                                   srcset="/assets/img/tin-tuc/tin_4.png 664w, /assets/img/tin-tuc/tin_4-300x237.png 300w"
