--- a/src/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.ejs
+++ b/src/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.ejs
@@ -78,89 +78,88 @@
                       <p>Các chất chống oxy hóa có nguồn gốc tự nhiên như các hợp chất polyphenol nhất định, hiện có ở dạng chiết xuất hoặc một phần của các nguyên liệu đặc biệt nào đó. Các hợp chất này cho tác dụng chống oxy hóa mạnh mẽ, có thể giúp tiết kiệm hay thay thế vai trò của vitamin E. Thực tế, vào những thời điểm giá cả vitamin E trở nên đắt đỏ, các chất phụ gia như trên đã được gia tăng sử dụng. Có một hệ số thay thế (ví dụ, x mg polyphenol như từ nguồn này bằng y IU vitamin E), nhưng công thức này đối với mỗi sản phẩm là khác nhau vì không phải tất cả các chất polyphenol đều như nhau (trong thực tế, polyphenol là một nhóm rất lớn và đa dạng các hợp chất). Ngoài ra, quá trình nghiên cứu vẫn còn đang tiến hành và chưa có kết quả cụ thể, nhưng kết quả đầy hứa hẹn. Nhìn chung, ít nhất thì chúng ta có thể thay thế được một phần nhỏ vitamin E bằng các sản phẩm phụ gia như trên, đặc biệt là khi vitamin này được ứng dụng ở mức độ siêu dinh dưỡng.</p>
                       </div>
                       </div>
-                    <div class="post_relasted">
-                      <div class="post_relasted_content">
-                        <h3>Bài Viết Tương Tự</h3>
-                        <div class="Related-Post-By-Category">
-                          <ul>
-                            <li>
-                              <div class="Post-image">
-                                <a href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html"
-                                  title="Có thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ? thumbnail=" ><img width="
-                                  792" height="618"
-                                  src="/assets/img/tin-tuc/img_chuoi_1.jpg"
-                                  class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
-                                  srcset="/assets/img/tin-tuc/img_chuoi_1.jpg 792w, /assets/img/tin-tuc/img_chuoi_1-300x234.jpg 300w, /assets/img/tin-tuc/img_chuoi_1-768x599.jpg 768w, /assets/img/tin-tuc/img_chuoi_1-700x546.jpg 700w"
-                                  sizes="(max-width: 792px) 100vw, 792px" /></a>
-                              </div>
-                              <div class="post-text">
-                                <div class="post-text_1">
-                                  <h4><a
-                                      href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html">Có
-                                      thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ?</a></h4>
-                                  <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                    Sáu | 2020</div>
-                                  <p>Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất chống oxy
-                                    hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này giải thích lý do
-                                    vì sao vitamin E rất quan trọng đối với&#8230;</p>
-                                  <div class="view_more_relasted"><a
-                                      href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html">Xem
-                                      Thêm</a></div>
+                      <div class="post_relasted">
+                        <div class="post_relasted_content">
+                          <h3>Bài Viết Tương Tự</h3>
+                          <div class="Related-Post-By-Category">
+                            <ul>
+                              <li>
+                                <div class="Post-image">
+                                  <a href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html"
+                                    title="Có thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ?" thumbnail=""" ><img width="
+                                    792" height="618"
+                                    src="/assets/img/tin-tuc/img_chuoi_1.jpg"
+                                    class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
+                                    srcset="/assets/img/tin-tuc/img_chuoi_1.jpg 792w, /assets/img/tin-tuc/img_chuoi_1-300x234.jpg 300w, /assets/img/tin-tuc/img_chuoi_1-768x599.jpg 768w, /assets/img/tin-tuc/img_chuoi_1-700x546.jpg 700w"
+                                    sizes="(max-width: 792px) 100vw, 792px" /></a>
                                 </div>
-                              </div>
-                            </li>
-                            <li>
-                              <div class="Post-image">
-                                <a href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html"
-                                  title="Kiểm soát giá trị đệm trong thức ăn heo con thumbnail=" ><img width=" 800"
-                                  height="560"
-                                  src="/assets/img/tin-tuc/iStock_487525682-e1529470879149.jpg"
-                                  class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="" /></a>
-                              </div>
-                              <div class="post-text">
-                                <div class="post-text_1">
-                                  <h4><a
-                                      href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html">Kiểm
-                                      soát giá trị đệm trong thức ăn heo con</a></h4>
-                                  <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                    Sáu | 2020</div>
-                                  <p>Thực tiễn xây dựng khẩu phần thức ăn heo con hiện đại cần tính đến khả năng đệm của
-                                    khẩu phần, mục tiêu kiểm soát khả năng đệm đạt dưới 650 meq/kg. &nbsp; Trong bất kỳ
-                                    hệ thống chăn nuôi heo thâm canh nào cũng&#8230;</p>
-                                  <div class="view_more_relasted"><a
-                                      href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html">Xem
-                                      Thêm</a></div>
-                                </div>
-                              </div>
-                            </li>
-                            <li>
-                              <div class="Post-image">
-                                <a href="/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.html"
-                                  title="Điều chỉnh chế độ dinh dưỡng cho heo nái trong giai đoạn chuyển tiếp khi sinh thumbnail="" ><img width="
-                                  664" height="524" src="/assets/img/tin-tuc/tin_4.png"
-                                  class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
-                                  srcset="/assets/img/tin-tuc/tin_4.png 664w, /assets/img/tin-tuc/tin_4-300x237.png 300w"
-                                  sizes="(max-width: 664px) 100vw, 664px" /></a>
-                              </div>
-                              <div class="post-text">
-                                <div class="post-text_1">
-                                  <h4><a href="/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.html">Điều chỉnh chế độ dinh dưỡng cho heo nái
-                                      trong giai đoạn chuyển tiếp khi sinh</a></h4>
-                                  <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                    Sáu | 2020</div>
-                                  <p>Heo con có sức sống tốt hơn sẽ giúp tăng lợi nhuận trong quá trình chăn nuôi. Dựa
-                                    trên những thí nghiệm gần đây và kết quả thực hiện chương trình dinh dưỡng tiên tiến
-                                    đã khẳng định rằng cải thiện dinh dưỡng cho heo&#8230;</p>
-                                  <div class="view_more_relasted"><a href="/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.html">Xem Thêm</a>
+                                <div class="post-text">
+                                  <div class="post-text_1">
+                                    <h4><a
+                                        href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html">Có
+                                        thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ?</a></h4>
+                                    <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
+                                      Sáu | 2020</div>
+                                    <p>Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất chống oxy
+                                      hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này giải thích lý do
+                                      vì sao vitamin E rất quan trọng đối với&#8230;</p>
+                                    <div class="view_more_relasted"><a
+                                        href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html">Xem
+                                        Thêm</a></div>
                                   </div>
                                 </div>
-                              </div>
-                            </li>
-                          </ul>
-                        </div>
+                              </li>
+                              <li>
+                                <div class="Post-image">
+                                  <a href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html"
+                                    title="Kiểm soát giá trị đệm trong thức ăn heo con" thumbnail="" ><img width=" 800"
+                                    height="560"
+                                    src="/assets/img/tin-tuc/iStock_487525682-e1529470879149.jpg"
+                                    class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="" /></a>
+                                </div>
+                                <div class="post-text">
+                                  <div class="post-text_1">
+                                    <h4><a
+                                        href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html">Kiểm
+                                        soát giá trị đệm trong thức ăn heo con</a></h4>
+                                    <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
+                                      Sáu | 2020</div>
+                                    <p>Thực tiễn xây dựng khẩu phần thức ăn heo con hiện đại cần tính đến khả năng đệm của
+                                      khẩu phần, mục tiêu kiểm soát khả năng đệm đạt dưới 650 meq/kg. &nbsp; Trong bất kỳ
+                                      hệ thống chăn nuôi heo thâm canh nào cũng&#8230;</p>
+                                    <div class="view_more_relasted"><a
+                                        href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html">Xem
+                                        Thêm</a></div>
+                                  </div>
+                                </div>
+                              </li>
+                              <li>
+                                <div class="Post-image">
+                                  <a href="/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.html"
+                                    title="Điều chỉnh chế độ dinh dưỡng cho heo nái trong giai đoạn chuyển tiếp khi sinh" thumbnail="" ><img width="
+                                    664" height="524" src="/assets/img/tin-tuc/tin_4.png"
+                                    class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
+                                    srcset="/assets/img/tin-tuc/tin_4.png 664w, /assets/img/tin-tuc/tin_4-300x237.png 300w"
+                                    sizes="(max-width: 664px) 100vw, 664px" /></a>
+                                </div>
+                                <div class="post-text">
+                                  <div class="post-text_1">
+                                    <h4><a href="/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.html">Điều chỉnh chế độ dinh dưỡng cho heo nái
+                                        trong giai đoạn chuyển tiếp khi sinh</a></h4>
+                                    <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
+                                      Sáu | 2020</div>
+                                    <p>Heo con có sức sống tốt hơn sẽ giúp tăng lợi nhuận trong quá trình chăn nuôi. Dựa
+                                      trên những thí nghiệm gần đây và kết quả thực hiện chương trình dinh dưỡng tiên tiến
+                                      đã khẳng định rằng cải thiện dinh dưỡng cho heo&#8230;</p>
+                                    <div class="view_more_relasted"><a href="/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.html">Xem Thêm</a>
+                                    </div>
+                                  </div>
+                                </div>
+                              </li>
+                            </ul>
+                          </div>
                         </div>
                       </div>
-                    </div>
                   </div>
                 </article> <br /><br />
               </div>
