--- a/src/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.ejs
+++ b/src/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.ejs
@@ -107,88 +107,88 @@
                       <p>&nbsp;</p>
                       <p>Trong thập kỷ qua, trung bình kích thước lứa sinh ở nhiều nái đã tăng hơn 30%. Số lượng heo con cai sữa không theo kịp thách thức sống còn về sau cũng tăng lên. Việc lựa chọn giống vật nuôi di truyền, quản lý và vệ sinh góp phần tăng khả năng sống sót của heo con. Áp dụng một chiến lược dinh dưỡng cụ thể cho heo nái từ giai cai sữa cho đến thời điểm động dục lại, và trong giai đoạn chuyển tiếp từ thời kỳ mang thai sang nuôi con giúp cải thiện hiệu suất của heo nái vượt bậc.</p>
                       </div>
-                    <div class="post_relasted">
-                      <div class="post_relasted_content">
-                        <h3>Bài Viết Tương Tự</h3>
-                        <div class="Related-Post-By-Category">
-                          <ul>
-                            <li>
-                              <div class="Post-image">
-                                <a href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html"
-                                  title="Có thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ? thumbnail=" ><img width="
-                                  792" height="618"
-                                  src="/assets/img/tin-tuc/img_chuoi_1.jpg"
-                                  class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
-                                  srcset="/assets/img/tin-tuc/img_chuoi_1.jpg 792w, /assets/img/tin-tuc/img_chuoi_1-300x234.jpg 300w, /assets/img/tin-tuc/img_chuoi_1-768x599.jpg 768w, /assets/img/tin-tuc/img_chuoi_1-700x546.jpg 700w"
-                                  sizes="(max-width: 792px) 100vw, 792px" /></a>
-                              </div>
-                              <div class="post-text">
-                                <div class="post-text_1">
-                                  <h4><a
-                                      href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html">Có
-                                      thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ?</a></h4>
-                                  <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                    Sáu | 2020</div>
-                                  <p>Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất chống oxy
-                                    hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này giải thích lý do
-                                    vì sao vitamin E rất quan trọng đối với&#8230;</p>
-                                  <div class="view_more_relasted"><a
-                                      href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html">Xem
-                                      Thêm</a></div>
+                      <div class="post_relasted">
+                        <div class="post_relasted_content">
+                          <h3>Bài Viết Tương Tự</h3>
+                          <div class="Related-Post-By-Category">
+                            <ul>
+                              <li>
+                                <div class="Post-image">
+                                  <a href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html"
+                                    title="Có thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ?" thumbnail=""" ><img width="
+                                    792" height="618"
+                                    src="/assets/img/tin-tuc/img_chuoi_1.jpg"
+                                    class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
+                                    srcset="/assets/img/tin-tuc/img_chuoi_1.jpg 792w, /assets/img/tin-tuc/img_chuoi_1-300x234.jpg 300w, /assets/img/tin-tuc/img_chuoi_1-768x599.jpg 768w, /assets/img/tin-tuc/img_chuoi_1-700x546.jpg 700w"
+                                    sizes="(max-width: 792px) 100vw, 792px" /></a>
                                 </div>
-                              </div>
-                            </li>
-                            <li>
-                              <div class="Post-image">
-                                <a href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html"
-                                  title="Kiểm soát giá trị đệm trong thức ăn heo con thumbnail=" ><img width=" 800"
-                                  height="560"
-                                  src="/assets/img/tin-tuc/iStock_487525682-e1529470879149.jpg"
-                                  class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="" /></a>
-                              </div>
-                              <div class="post-text">
-                                <div class="post-text_1">
-                                  <h4><a
-                                      href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html">Kiểm
-                                      soát giá trị đệm trong thức ăn heo con</a></h4>
-                                  <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                    Sáu | 2020</div>
-                                  <p>Thực tiễn xây dựng khẩu phần thức ăn heo con hiện đại cần tính đến khả năng đệm của
-                                    khẩu phần, mục tiêu kiểm soát khả năng đệm đạt dưới 650 meq/kg. &nbsp; Trong bất kỳ
-                                    hệ thống chăn nuôi heo thâm canh nào cũng&#8230;</p>
-                                  <div class="view_more_relasted"><a
-                                      href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html">Xem
-                                      Thêm</a></div>
-                                </div>
-                              </div>
-                            </li>
-                            <li>
-                              <div class="Post-image">
-                                <a href="/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.html"
-                                  title="ĐIỀU CHỈNH CHẾ ĐỘ DINH DƯỠNG CHO HEO NÁI TRONG GIAI ĐOẠN CHUYỂN TIẾP KHI SINH thumbnail="" ><img width="
-                                  664" height="524" src="/assets/img/tin-tuc/tin_4.png"
-                                  class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
-                                  srcset="/assets/img/tin-tuc/tin_4.png 664w, /assets/img/tin-tuc/tin_4-300x237.png 300w"
-                                  sizes="(max-width: 664px) 100vw, 664px" /></a>
-                              </div>
-                              <div class="post-text">
-                                <div class="post-text_1">
-                                  <h4><a href="/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.html">Điều chỉnh chế độ dinh dưỡng cho heo nái
-                                      trong giai đoạn chuyển tiếp khi sinh</a></h4>
-                                  <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                    Sáu | 2020</div>
-                                  <p>Heo con có sức sống tốt hơn sẽ giúp tăng lợi nhuận trong quá trình chăn nuôi. Dựa
-                                    trên những thí nghiệm gần đây và kết quả thực hiện chương trình dinh dưỡng tiên tiến
-                                    đã khẳng định rằng cải thiện dinh dưỡng cho heo&#8230;</p>
-                                  <div class="view_more_relasted"><a href="/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.html">Xem Thêm</a>
+                                <div class="post-text">
+                                  <div class="post-text_1">
+                                    <h4><a
+                                        href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html">Có
+                                        thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ?</a></h4>
+                                    <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
+                                      Sáu | 2020</div>
+                                    <p>Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất chống oxy
+                                      hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này giải thích lý do
+                                      vì sao vitamin E rất quan trọng đối với&#8230;</p>
+                                    <div class="view_more_relasted"><a
+                                        href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html">Xem
+                                        Thêm</a></div>
                                   </div>
                                 </div>
-                              </div>
-                            </li>
-                          </ul>
+                              </li>
+                              <li>
+                                <div class="Post-image">
+                                  <a href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html"
+                                    title="Kiểm soát giá trị đệm trong thức ăn heo con" thumbnail="" ><img width=" 800"
+                                    height="560"
+                                    src="/assets/img/tin-tuc/iStock_487525682-e1529470879149.jpg"
+                                    class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="" /></a>
+                                </div>
+                                <div class="post-text">
+                                  <div class="post-text_1">
+                                    <h4><a
+                                        href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html">Kiểm
+                                        soát giá trị đệm trong thức ăn heo con</a></h4>
+                                    <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
+                                      Sáu | 2020</div>
+                                    <p>Thực tiễn xây dựng khẩu phần thức ăn heo con hiện đại cần tính đến khả năng đệm của
+                                      khẩu phần, mục tiêu kiểm soát khả năng đệm đạt dưới 650 meq/kg. &nbsp; Trong bất kỳ
+                                      hệ thống chăn nuôi heo thâm canh nào cũng&#8230;</p>
+                                    <div class="view_more_relasted"><a
+                                        href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html">Xem
+                                        Thêm</a></div>
+                                  </div>
+                                </div>
+                              </li>
+                              <li>
+                                <div class="Post-image">
+                                  <a href="/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.html"
+                                    title="Điều chỉnh chế độ dinh dưỡng cho heo nái trong giai đoạn chuyển tiếp khi sinh" thumbnail="" ><img width="
+                                    664" height="524" src="/assets/img/tin-tuc/tin_4.png"
+                                    class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
+                                    srcset="/assets/img/tin-tuc/tin_4.png 664w, /assets/img/tin-tuc/tin_4-300x237.png 300w"
+                                    sizes="(max-width: 664px) 100vw, 664px" /></a>
+                                </div>
+                                <div class="post-text">
+                                  <div class="post-text_1">
+                                    <h4><a href="/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.html">Điều chỉnh chế độ dinh dưỡng cho heo nái
+                                        trong giai đoạn chuyển tiếp khi sinh</a></h4>
+                                    <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
+                                      Sáu | 2020</div>
+                                    <p>Heo con có sức sống tốt hơn sẽ giúp tăng lợi nhuận trong quá trình chăn nuôi. Dựa
+                                      trên những thí nghiệm gần đây và kết quả thực hiện chương trình dinh dưỡng tiên tiến
+                                      đã khẳng định rằng cải thiện dinh dưỡng cho heo&#8230;</p>
+                                    <div class="view_more_relasted"><a href="/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.html">Xem Thêm</a>
+                                    </div>
+                                  </div>
+                                </div>
+                              </li>
+                            </ul>
+                          </div>
                         </div>
                       </div>
-                    </div>
                   </div>
                 </article> <br /><br />
               </div>
